Rename 'Current Focus' link to 'Research Focus'

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav>
   <a href="{{ '/' | relative_url }}">Home</a>
   <a href="{{ '/about/' | relative_url }}">About</a>
-  <a href="{{ '/focus/' | relative_url }}">Current Focus</a>
+  <a href="{{ '/focus/' | relative_url }}">Research Focus</a>
   <a href="{{ '/education/' | relative_url }}">Education</a>
   <a href="{{ '/publications/' | relative_url }}">Publications</a>
   <a href="{{ '/experience/' | relative_url }}">Experience</a>
